--- a/incremental_learning_model_wrapper.ipynb
+++ b/incremental_learning_model_wrapper.ipynb
@@ -6,7 +6,8 @@
       "name": "incremental_learning_model_wrapper.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOVvGRP01bLayveyO1+aBNx",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyM0xpThbW3cUxNQ7Bp1UMp9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -59,26 +60,13 @@
       "metadata": {
         "id": "E6Z3Vxc9tanf",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 52
-        },
-        "outputId": "eab26b9a-a1df-4c66-b54d-ca32106c4832"
+        "colab": {}
       },
       "source": [
         "dataset = datasets.cifar10.load_data()"
       ],
-      "execution_count": 2,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Downloading data from https://www.cs.toronto.edu/~kriz/cifar-10-python.tar.gz\n",
-            "170500096/170498071 [==============================] - 2s 0us/step\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -167,6 +155,7 @@
         "  def __init__(self, n_classes):\n",
         "    super(Classifier, self).__init__()\n",
         "    self.flatten = Flatten()\n",
+        "    self.n_classes = n_classes\n",
         "    self.d1 = Dense(64, activation='relu')\n",
         "    self.d2 = Dense(n_classes)\n",
         "\n",
@@ -176,23 +165,18 @@
         "    return self.d2(x)\n",
         "\n",
         "class IncrementalLearning(Model):\n",
-        "  def __init__(self, feature_extractor,classifier = None, is_online = False, add_new_prediction_layer = False):\n",
+        "  def __init__(self, feature_extractor,classifier, is_online = False):\n",
         "    super(IncrementalLearning, self).__init__()\n",
         "    self.feature_extractor=feature_extractor\n",
-        "    self.classifier = classifier\n",
         "    if is_online:\n",
         "      self.feature_extractor.trainable = False\n",
-        "\n",
-        "    if classifier is not None:\n",
-        "      # Get the layers of the classifier\n",
-        "      layer_names = [var.name for var in classifier.trainable_variables]\n",
-        "      if not layer_names:\n",
-        "\n",
-        "      if add_new_prediction_layer:\n",
-        "        self.classifier.trainable = False\n",
-        "        # Create new layer inside classifier model\n",
-        "        \n",
-        "    \n",
+        "      # Clone the old classifier weights and  set it non-trainable\n",
+        "      classifier.trainable = False\n",
+        "      # Add new prediction layer and set it trainable\n",
+        "      self.new_prediction_layer = tf.keras.layers.Dense(classifier.n_classes,trainable=True)\n",
+        "      self.classifier= tf.keras.Sequential([classifier, self.new_prediction_layer])\n",
+        "    else:\n",
+        "      self.classifier = classifier\n",
         "\n",
         "  def call(self, x):\n",
         "    features = self.feature_extractor(x)\n",
@@ -208,46 +192,164 @@
       "metadata": {
         "id": "chhYAHUb1QU0",
         "colab_type": "code",
+        "outputId": "09d56733-4060-4053-c887-893f282a7dec",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 87
-        },
-        "outputId": "d7c6710d-d935-4d79-b69d-cf76cd971606"
+        }
       },
       "source": [
         "x = Classifier(10)\n",
         "x.build((64,))\n",
-        "var = [var.name for var in x.trainable_variables]\n",
+        "var= [var.name for var in x.trainable_variables]\n",
         "var"
       ],
-      "execution_count": 17,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "['dense_20/kernel:0',\n",
-              " 'dense_20/bias:0',\n",
-              " 'dense_21/kernel:0',\n",
-              " 'dense_21/bias:0']"
+              "['dense_12/kernel:0',\n",
+              " 'dense_12/bias:0',\n",
+              " 'dense_13/kernel:0',\n",
+              " 'dense_13/bias:0']"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 17
+          "execution_count": 20
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "_QIkFmChwBvl",
+        "id": "fhAFuSUEuv-6",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "model = IncrementalLearning(feature_extractor,classifier)"
+        "feature_extractor = FeatureExtractor(trainable=True)\n",
+        "classifier = Classifier(10)\n",
+        "model = IncrementalLearning(feature_extractor,classifier,is_online=False)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "3d_4WO01tLcu",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "model.build((None,32,32,3))"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "_QIkFmChwBvl",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 228
+        },
+        "outputId": "518f8034-66d6-4a30-b070-a20d70cf76ef"
+      },
+      "source": [
+        "model.summary()"
+      ],
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Model: \"incremental_learning_4\"\n",
+            "_________________________________________________________________\n",
+            "Layer (type)                 Output Shape              Param #   \n",
+            "=================================================================\n",
+            "feature_extractor_5 (Feature multiple                  56320     \n",
+            "_________________________________________________________________\n",
+            "classifier_7 (Classifier)    multiple                  66250     \n",
+            "=================================================================\n",
+            "Total params: 122,570\n",
+            "Trainable params: 122,570\n",
+            "Non-trainable params: 0\n",
+            "_________________________________________________________________\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "QVAiQcT7okO7",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "feature_extractor1 = FeatureExtractor(trainable=False)\n",
+        "classifier1 = Classifier(10)\n",
+        "model2 = IncrementalLearning(feature_extractor,classifier,is_online=True)\n"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "GviDAEPaCrbw",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 263
+        },
+        "outputId": "c2668e61-9a29-4eac-b2e5-a4cf1ae098f9"
+      },
+      "source": [
+        "model2.build((None,32,32,3))\n",
+        "model2.summary()"
+      ],
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Model: \"incremental_learning_5\"\n",
+            "_________________________________________________________________\n",
+            "Layer (type)                 Output Shape              Param #   \n",
+            "=================================================================\n",
+            "feature_extractor_5 (Feature multiple                  56320     \n",
+            "_________________________________________________________________\n",
+            "dense_18 (Dense)             multiple                  110       \n",
+            "_________________________________________________________________\n",
+            "sequential (Sequential)      multiple                  66360     \n",
+            "=================================================================\n",
+            "Total params: 122,680\n",
+            "Trainable params: 110\n",
+            "Non-trainable params: 122,570\n",
+            "_________________________________________________________________\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "McYUzzAsFenB",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
       ],
       "execution_count": 0,
       "outputs": []
